--- a/admin-blog.html
+++ b/admin-blog.html
@@ -92,20 +92,20 @@
   let currentMonth = "";
   let editor;
 
-  window.addEventListener("DOMContentLoaded", () => {
+  window.addEventListener("load", () => {
   setTimeout(() => {
-    const contentEl = document.querySelector('#content');
-    if (!contentEl) {
-      console.warn('エディタ領域 (#content) が見つかりません');
+    const el = document.querySelector("#content");
+    if (!el) {
+      console.warn("エディタ領域 (#content) が見つかりません");
       return;
     }
-    ClassicEditor.create(contentEl)
+    ClassicEditor.create(el)
       .then(newEditor => {
         editor = newEditor;
-        console.log('CKEditor 初期化完了');
+        console.log("CKEditor 初期化完了");
       })
-      .catch(error => console.error('CKEditor初期化エラー:', error));
-  }, 300);
+      .catch(error => console.error("CKEditor初期化エラー:", error));
+  }, 500);
 });
 
   async function loadMonths(){
