--- a/admin-blog.html
+++ b/admin-blog.html
@@ -92,20 +92,25 @@
   let currentMonth = "";
   let editor;
 
-  window.addEventListener("load", () => {
-  setTimeout(() => {
-    const el = document.querySelector("#content");
-    if (!el) {
-      console.warn("エディタ領域 (#content) が見つかりません");
-      return;
-    }
-    ClassicEditor.create(el)
-      .then(newEditor => {
-        editor = newEditor;
-        console.log("CKEditor 初期化完了");
-      })
-      .catch(error => console.error("CKEditor初期化エラー:", error));
-  }, 500);
+  let editor;
+
+function initEditor() {
+  const el = document.querySelector("#content");
+  if (!el) {
+    console.warn("エディタ領域 (#content) が見つかりません");
+    return;
+  }
+  ClassicEditor.create(el)
+    .then(newEditor => {
+      editor = newEditor;
+      console.log("CKEditor 初期化完了");
+    })
+    .catch(error => console.error("CKEditor初期化エラー:", error));
+}
+
+// ページロード後に確実に初期化
+window.addEventListener("load", () => {
+  setTimeout(initEditor, 500);
 });
 
   async function loadMonths(){
@@ -215,3 +220,20 @@
   window.prevPage = prevPage;
   window.nextPage = nextPage;
 </script>
+
+function fillForm(article) {
+  document.querySelector('#title').value = article.title || "";
+  document.querySelector('#slug').value = article.slug || "";
+  document.querySelector('#description').value = article.description || "";
+  document.querySelector('#thumbnail_url').value = article.thumbnail_url || "";
+  document.querySelector('#category').value = article.category || "";
+  document.querySelector('#tags').value = article.tags || "";
+  document.querySelector('#published').checked = article.published === true;
+
+  // 本文（CKEditorに反映）
+  if (editor) {
+    editor.setData(article.content || "");
+  } else {
+    console.warn("CKEditorがまだ初期化されていません");
+  }
+}
