--- a/admin-top.html
+++ b/admin-top.html
@@ -146,5 +146,6 @@
     init();
   </script>
   <script src="/env.js"></script>
+  <script src="https://cdn.ckeditor.com/ckeditor5/41.2.0/classic/ckeditor.js"></script>
 </body>
 </html>
