--- a/admin-top.html
+++ b/admin-top.html
@@ -98,6 +98,9 @@
     function executeScripts(container) {
       const scripts = container.querySelectorAll("script");
       scripts.forEach(oldScript => {
+        // ★ type="module" の場合は再実行しない
+        if (oldScript.type === "module") return;
+
         const newScript = document.createElement("script");
         if (oldScript.type) newScript.type = oldScript.type;
         if (oldScript.src) {
