--- a/admin-menu.html
+++ b/admin-menu.html
@@ -96,7 +96,7 @@
     alert("Supabaseが初期化されていません。トップページを再読込してください。");
   }
 
-  let editingId = null;
+  var editingId = null;
 
   function showToast(message, type="success") {
     const toast = document.createElement("div");
